--- a/.github/workflows/melpazoid-etherpad.yml
+++ b/.github/workflows/melpazoid-etherpad.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         LOCAL_REPO: ${{ github.workspace }}
         # RECIPE is your recipe as written for MELPA:
-        RECIPE: (etherpad :repo "zzkt/ethermacs" :fetcher github)
+        RECIPE: (etherpad :repo "zzkt/ethermacs" :fetcher github :files ("etherpad.el"))
         # set this to false (or remove it) if the package isn't on MELPA:
         EXIST_OK: true
       run: echo $GITHUB_REF && make -C ~/melpazoid
